# s3Flood

./: .gitignore  CHANGELOG.md  FINAL_USAGE.md  INSTRUCTIONS.md  INTERACTIVE_MENU_PLAN.md  LICENSE  README.md  README_POWERSHELL.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.5.2.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.6.1.md  RELEASE_NOTES_v1.6.2.md  ROADMAP.md  SUMMARY.md  TESTING_INTERACTIVE.md  USAGE.md  VERSION  WINDOWS_FILES_GUIDE.md  WINDOWS_INSTALL.md  build-windows-portable.sh  config.example.yaml  config.kazan.yaml  config.minio.yaml  config.new.yaml  config.real.yaml  config.sample.yaml  config.test-real.yaml  debug_s3.py  demo_progress.py  final_demo.py  install.bat  install.sh  install_powershell.ps1  out-minio.csv  out-minio.json  pyproject.toml  real-metrics.csv  real-report.json  (+28 more)
.github/workflows/: ci.yml  release.yml  windows-bundle.yml  windows-portable.yml
docs/: GITHUB_INSTRUCTIONS.md
scripts/: install_linux.sh  install_windows.ps1  make_dataset.py
src/s3flood/: __main__.py  app_settings.py  browser.py  cli.py  config.py  config_editing.md  config_editor.py  dashboard.py  dataset.py  defaults.py  executor.py  interactive.py  metrics.py  (+2 more)
tests/: cluster_load_test.py  concurrent_operations_test.py  demo_clean.py  parallel_load_test.py  parallel_logic_test.py  real_cluster_test.py  test_app_settings.py  test_browser_progress.py  test_browser_render.py  test_config.py  test_config_editor.py  test_dashboard.py  test_dataset.py  test_executor_metrics.py  test_metrics.py  test_report.py  test_retry.py  test_s3browser_io.py
(+8 files in other folders)
